force-app/main/default/objects/Product2/fields/Compatible_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Compatible_Product_Code__c</fullName>
    <description
  >Host product ProductCode this spare part fits, or ALL for universal components. Used by the AI Parts &amp; Logistics orchestrator for compatibility checks. Keyed by ProductCode, not Product2 Id.</description>
    <inlineHelpText
  >Laptop product code (e.g. AV-LP-15X-PRO) or ALL for universal spare parts.</inlineHelpText>
    <label>Compatible Product Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>