force-app/main/default/objects/Product2/fields/Is_Universal_Part__c.field-meta.xml
<CustomField>
    <fullName>Is_Universal_Part__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >True when Compatible_Product_Code__c is ALL — part fits any supported laptop model.</description>
    <inlineHelpText
  >Check for universal components (RAM, SSD, power adapters, etc.).</inlineHelpText>
    <label>Is Universal Part</label>
    <type>Checkbox</type>
</CustomField>